--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-    "editor.fontSize": 12,
-    "workbench.colorTheme": "Default Light+",
-    "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe"
+  "editor.fontSize": 12,
+  "workbench.colorTheme": "Default Light+",
+  "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe",
+  "editor.formatOnSave": true
 }
