--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@auth0/angular-jwt": "^2.1.0",
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
