--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@auth0/angular-jwt": "^2.1.0",
+    "angular-sortablejs": "^2.7.0",
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "rxjs": "~6.2.0",
+    "sortablejs": "^1.8.4",
     "web-animations-js": "^2.3.1",
     "zone.js": "~0.8.26"
   },
