--- a/angular.json
+++ b/angular.json
@@ -62,7 +62,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "AngularApp:build"
+            "browserTarget": "AngularApp:build",
+			"sslKey": "certificates/server.key",
+            "sslCert": "certificates/server.crt",
           },
           "configurations": {
             "production": {
