--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "ngx-spinner": "^7.1.4",
     "rxjs": "~6.2.0",
     "sortablejs": "^1.8.4",
     "web-animations-js": "^2.3.1",
