--- a/angular.json
+++ b/angular.json
@@ -69,7 +69,7 @@
           "options": {
             "browserTarget": "AngularApp:build",
             "sslKey": "certificates/server.key",
-            "sslCert": "certificates/server.crt",
+            "sslCert": "certificates/server.crt"
           },
           "configurations": {
             "production": {
