--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "name": "angular-app",
   "version": "0.0.0",
+  "description": "Angular-app",
+  "author": {
+    "name": "sudeep",
+    "email": "sudeepasmith8@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SudeepGujju/Angular.git"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -52,5 +61,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
+  },
+  "engines": {
+    "node": "8.12.0",
+    "npm": "6.4.1"
   }
 }
